--- a/client/public/index.html
+++ b/client/public/index.html
@@ -12,6 +12,9 @@
     integrity="sha256-+N4/V/SbAFiW1MPBCXnfnP9QSN3+Keu+NlB+0ev/YKQ=" crossorigin="anonymous" />
 
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+  <!-- <script src="https://js.stripe.com/v3/"></script> -->
+  <script src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
+  <script src="https://js.paystack.co/v1/inline.js"></script>
 
   <title>React App</title>
 </head>
