--- a/client/public/index.html
+++ b/client/public/index.html
@@ -3,20 +3,18 @@
 
 <head>
   <meta charset="utf-8" />
-  <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+  <!-- <link rel="icon" href="%PUBLIC_URL%/favicon.ico" /> -->
+  <link rel="shortcut icon" type="image/x-icon" href="BN.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
-  <meta name="description" content="Web site created using create-react-app" />
-  <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+  <meta name="description" content="An E-commerce website for buying clothes,shoes, jewelleries and bags" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css"
     integrity="sha256-+N4/V/SbAFiW1MPBCXnfnP9QSN3+Keu+NlB+0ev/YKQ=" crossorigin="anonymous" />
-
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-  <!-- <script src="https://js.stripe.com/v3/"></script> -->
   <script src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
   <script src="https://js.paystack.co/v1/inline.js"></script>
 
-  <title>React App</title>
+  <title>Blanche Neige</title>
 </head>
 
 <body>
