feat: add meta tags

--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="An E-commerce website for buying clothes,shoes, jewelleries and bags" />
+  <meta name="image" property="og:image" content="https://res.cloudinary.com/dtyrfo0fx/image/upload/f_auto,c_limit,w_1920,q_auto/v1623611207/portfolio/donflix2.png">
+  <meta name="author" content="Babajide Adedeji">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css"
     integrity="sha256-+N4/V/SbAFiW1MPBCXnfnP9QSN3+Keu+NlB+0ev/YKQ=" crossorigin="anonymous" />
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
